[gd_scene load_steps=25 format=3 uid="uid://cs4c5emwyuatt"]

[ext_resource type="Script" path="res://Scripts/Rooms/FinalRoom.gd" id="1_qlwcb"]
[ext_resource type="Theme" uid="uid://cgmxss60dp2dp" path="res://Ressources/Themes/main_theme.tres" id="2_8v67g"]
[ext_resource type="PackedScene" uid="uid://dqs73dcu3a4qv" path="res://Scenes/light.tscn" id="3_lyri0"]
[ext_resource type="PackedScene" uid="uid://b020vwlof58o8" path="res://Scenes/speaker.tscn" id="4_x4mp8"]
[ext_resource type="AudioStream" uid="uid://c1salcjsi01ta" path="res://Ressources/Audios/lastroom.mp3" id="5_qyx4x"]
[ext_resource type="PackedScene" uid="uid://dnn52v1igl1sx" path="res://Scenes/door.tscn" id="6_80gs1"]
[ext_resource type="Material" uid="uid://bdqe31xmn3pqy" path="res://Ressources/Materials/floor_mat.tres" id="7_v4uoc"]
[ext_resource type="Material" uid="uid://d1rhmi4070sgl" path="res://Ressources/Materials/spawn_room_wall.tres" id="8_0ro3d"]
[ext_resource type="FontFile" uid="uid://c80nrjbxxi5nm" path="res://Ressources/Fonts/Tinos-Regular.ttf" id="9_6ggcl"]
[ext_resource type="AudioStream" uid="uid://y4htba0xr4gl" path="res://Ressources/Audios/ending-music.mp3" id="10_x36tv"]

[sub_resource type="SphereShape3D" id="SphereShape3D_b3qy1"]
radius = 18.257

[sub_resource type="BoxMesh" id="BoxMesh_n6vxj"]
size = Vector3(16, 0.1, 14.9)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_piq6e"]

[sub_resource type="PlaneMesh" id="PlaneMesh_m3w6n"]
material = SubResource("StandardMaterial3D_piq6e")
size = Vector2(15, 15)

[sub_resource type="BoxShape3D" id="BoxShape3D_1asw6"]
size = Vector3(30, 0, 50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bshf7"]

[sub_resource type="PlaneMesh" id="PlaneMesh_fgrh5"]
material = SubResource("StandardMaterial3D_bshf7")
size = Vector2(30, 50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_brlio"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iev07"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kkpd6"]
diffuse_mode = 3
albedo_color = Color(0.988235, 0.682353, 0, 1)
metallic = 1.0

[sub_resource type="TextMesh" id="TextMesh_le68o"]
material = SubResource("StandardMaterial3D_kkpd6")
text = "3"
font = ExtResource("9_6ggcl")

[sub_resource type="Animation" id="Animation_w12mi"]
resource_name = "the end"
length = 23.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Control/Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3, 7, 9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(1, 1, 1, 1), Color(0, 0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Control/Label2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(9, 11, 14),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/Control/Label3:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(14, 16, 18),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/Control/Label4:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(18, 20, 22),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:is_ended")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(23),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("AudioStreamPlayer3D:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("AudioStreamPlayer3D:volume_db")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(18, 23),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -40.0]
}

[sub_resource type="Animation" id="Animation_gd50p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Control/Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Control/Label2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/Control/Label3:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/Control/Label4:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:is_ended")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("AudioStreamPlayer3D:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("AudioStreamPlayer3D:volume_db")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_maobi"]
_data = {
"RESET": SubResource("Animation_gd50p"),
"the end": SubResource("Animation_w12mi")
}

[node name="FinalRoom" type="Node3D"]
script = ExtResource("1_qlwcb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0
visible = false

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8v67g")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="CanvasLayer/Control"]
modulate = Color(0, 0, 0, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -11.5
offset_right = 71.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Congratulations...."

[node name="Label2" type="Label" parent="CanvasLayer/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = -11.5
offset_right = 129.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "You didn't listen to the narrator..."

[node name="Label3" type="Label" parent="CanvasLayer/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -11.5
offset_right = 42.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "And well...."

[node name="Label4" type="Label" parent="CanvasLayer/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -11.5
offset_right = 56.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "You have won."

[node name="FinalArea3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -35.5227)

[node name="CollisionShape3D" type="CollisionShape3D" parent="FinalArea3D"]
shape = SubResource("SphereShape3D_b3qy1")

[node name="Light" parent="." instance=ExtResource("3_lyri0")]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 3.8, -8)

[node name="SpotLight3D3" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.0195398, 4.48226, -14.7514)
spot_angle_attenuation = 3.86

[node name="Ceiling" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.9, -7.5)
mesh = SubResource("BoxMesh_n6vxj")

[node name="Speaker" parent="." instance=ExtResource("4_x4mp8")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 3, -14.7031)
audio_sources = Array[AudioStream]([ExtResource("5_qyx4x")])
audio_subtitles = Array[String](["Well, I'm beging you for the last time, you souldn't go through the door.... Because behind it, well, there is no more game. It's just the real world and it's not as fun... So frankly, you shouldn't go through it."])

[node name="Door" parent="." instance=ExtResource("6_80gs1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -14.95)
default_color = Color(0.976471, 0.886275, 0, 1)
is_good = true

[node name="Floor" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7.5)
material_override = ExtResource("7_v4uoc")
mesh = SubResource("PlaneMesh_m3w6n")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7.5)
shape = SubResource("BoxShape3D_1asw6")

[node name="Floor2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -40)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor2"]
mesh = SubResource("PlaneMesh_fgrh5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor2"]
shape = SubResource("BoxShape3D_1asw6")

[node name="Ceiling2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 9.9746, -40)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ceiling2"]
mesh = SubResource("PlaneMesh_fgrh5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ceiling2"]
shape = SubResource("BoxShape3D_1asw6")

[node name="WallCombinerCSG" type="CSGCombiner3D" parent="."]
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="WallCombinerCSG"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -14.95)
size = Vector3(30, 10, 0.1)
material = ExtResource("8_0ro3d")

[node name="CSGBox3D4" type="CSGBox3D" parent="WallCombinerCSG"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 15, 5, -39.95)
size = Vector3(50, 10, 0.1)
material = SubResource("StandardMaterial3D_brlio")

[node name="CSGBox3D8" type="CSGBox3D" parent="WallCombinerCSG"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -15, 5, -39.95)
size = Vector3(50, 10, 0.1)
material = SubResource("StandardMaterial3D_iev07")

[node name="CSGBox3D9" type="CSGBox3D" parent="WallCombinerCSG"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -33.5787)
size = Vector3(30, 10, 0.1)
material = SubResource("StandardMaterial3D_iev07")

[node name="CSGBox3D2" type="CSGBox3D" parent="WallCombinerCSG"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 7.45, 2, -7.5)
size = Vector3(15, 4, 0.1)
material = ExtResource("8_0ro3d")

[node name="CSGBox3D3" type="CSGBox3D" parent="WallCombinerCSG"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7.45, 2, -7.5)
size = Vector3(15, 4, 0.1)
material = ExtResource("8_0ro3d")

[node name="CSGBox3D6" type="CSGBox3D" parent="WallCombinerCSG"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -0.05)
size = Vector3(15, 4, 0.1)
material = ExtResource("8_0ro3d")

[node name="CSGBox3D7" type="CSGBox3D" parent="WallCombinerCSG"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, -0.15)
operation = 2
size = Vector3(1.45, 2.7, 0.3)

[node name="CSGBox3D5" type="CSGBox3D" parent="WallCombinerCSG"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00600004, 1.2, -14.95)
operation = 2
size = Vector3(1.45, 2.7, 0.3)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.99308, 1.99935, -14.8634)
visible = false
mesh = SubResource("TextMesh_le68o")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.2227, 3.14555, -31.3823)
light_energy = 16.0
omni_range = 17.0
omni_attenuation = 0.03125

[node name="OmniLight3D5" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5764, 5.44227, -28.4996)
light_energy = 16.0
omni_range = 13.6691

[node name="OmniLight3D2" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.90735e-06, 0.172094, -27.9396)
light_energy = 16.0
omni_range = 12.0
omni_attenuation = 0.0507659

[node name="OmniLight3D3" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.3887, 0.172094, -34.4069)
light_energy = 16.0
omni_range = 10.0

[node name="OmniLight3D4" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.525856, 0.172094, -24.6359)
light_energy = 16.0
omni_range = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_maobi")
}

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20.8684)
stream = ExtResource("10_x36tv")
bus = &"Music"

[connection signal="body_entered" from="FinalArea3D" to="." method="_on_final_area_3d_body_entered"]
[connection signal="light_is_on" from="Light" to="." method="_on_light_light_is_on"]
